[package]
name = "strictly"
version = "0.1.0"
authors = ["Rakesh Ranjan <rakeshranjan.568@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "~1.0.32"
serde = "~1.0.27"
serde_derive = "~1.0.27"
failure = "~0.1.1"
itertools = "~0.8.0"
#postgres = "~0.15.2"
rustc-serialize = "0.3.24"
slog = "~2.1.1"
slog-scope = "~4.0.1"
chrono-tz = "~0.4"

[dependencies.diesel]
version = "~1.3.3"
features = [
    "postgres",
    "serde_json",
]
[dependencies.postgres]
version = "~0.15.2"
features = ["with-serde_json"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
